# libvata

./: .gitignore  CMakeLists.txt  Makefile  create_archive.sh
cli/: operations.hh  vata.cc
include/vata/: bdd_bu_tree_aut.hh  explicit_tree_aut_op.hh  sim_param.hh
include/vata/finite_aut/: explicit_finite_aut.hh
include/vata/util/: binary_relation.hh  transl_weak.hh
python_interface/: cli_operation_representation.py  cli_options_enums.py  command_serializer.py  example_test.py  operation_options.py  test1.py  test_run.py  tester.py  vata_executor.py  vata_interface.py  vata_result.py
src/: CMakeLists.txt  bdd_bu_tree_aut.cc  bdd_bu_tree_aut_core.cc  bdd_bu_tree_aut_core.hh  bdd_bu_tree_aut_sim.cc  bdd_td_tree_aut_core.hh  bdd_td_tree_aut_sim.cc  bdd_td_tree_aut_sim_expl.cc  bdd_td_tree_aut_sim_expl.hh  explicit_lts_sim.cc  explicit_tree_aut_core.cc  explicit_tree_aut_core.hh  explicit_tree_aut_determinization.cc  explicit_tree_sim.cc  timbuk.y
src/gal/: CMakeLists.txt  bdd_td_tree_aut_sim_computer.cc  bdd_td_tree_aut_sim_computer.hh  bdd_td_tree_aut_sim_efficient.cc  bdd_td_tree_aut_sim_efficient.hh  bdd_td_tree_aut_sim_expl.cc  bdd_td_tree_aut_sim_expl.hh  compare_simulations.py  data_types.hh  find_fail.sh  grafy.ods  lukas_example  run_expl  run_incl_nosim.sh  run_incl_sim.sh  run_incl_sim1.sh  run_our  run_sim.sh  run_sim1.sh  run_sim_expl.sh  sim_efficient_types.hh  sim_efficient_types_functor.hh  simple_aut  test_inclusion.py
src/util/: cache.hh  cond_col.hh
tests/: incl_test.sh
tests/vata_tests/: compare_simulations.py  config  config_parser.py  execute_vata.py  find_fail.sh  inclusion_tester.py  inclusion_wrapper.py  operation_wrapper.py  operations.py  params.py  pokus  printer.py  run_test.py  simulation_comparator.py  simulation_tester.py  simulation_wrapper.py  test_inclusion.py  tester_interface.py  vata_configuration.py  vata_tests.py
unit_tests/: CMakeLists.txt  explicit_finite_aut_test.cc  tree_aut_test.hh
